kubernetes/it-tools/ingress.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: it-tools
  namespace: it-tools
spec:
  entryPoints:
  - websecure
  routes:
  - match: Host(`tools.tehmatt.com`)
    kind: Rule
    services:
    - name: it-tools
      port: 80
    middlewares:
    - name: default-headers
  tls: {}
